# batailleNavaleDirectX9

./: CMakeLists.txt  README.md  TODO.txt  doc.txt  dx.c  dx.h  gamesFunctions.c  gamesFunctions.cpp.h  gamesFunctions.h  guideHowToLaunch.txt  includes.h  main.c  spawningBoats.c  spawningBoats.h  windowProc.c
src/: dx.c  dx.h  gamesFunctions.c  gamesFunctions.h  includes.h  main.c  movingBoats.c  movingBoats.h  spawningBoats.c  spawningBoats.h
src/cFiles/: botActions.c  dx.c  gamesFunctions.c  main.c  movingBoats.c  scout.c  shooting.c  spawningBoats.c
src/headers/: botActions.h  dx.h  gamesFunctions.h  includes.h  movingBoats.h  scout.h  shooting.h  spawningBoats.h
